language_tests/source_files/invalid/fstring_unmatched_brace.tr
func main() {
    let _ = f"value=}"
}
